# wind_velocity_calculator

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/wind_velocity_calculator/: wind_velocity_calculator.hpp
launch/: wind_velocity_calculator.launch  windmaster.launch
src/: main.cpp
src/lib/: wind_velocity_calculator.cpp
